@@ -1,3 +1,8 @@
+Tue Jul 06 11:33:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+	* DAnCE/tools/Split_Plan/Locality_Splitter.cpp:
+	  Fixed bug in key comparison causing assertions on VC9.
+
 Tue Jul  6 11:13:22 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * etc/ciao.doxygen:
